@@ -149,6 +149,7 @@ module t;
       $write("hel", "lo, fr", "om a concatenated format string [%0t].\n", $time);
       $display("extra argument: ", $time);
       $display($time,, ": pre argument",, "after");
+      $display("empty: >%s<", "");
       $write("[%0t] Embedded tab '\t' and \r return\n", $time);
       $display("[%0t] Embedded\
 multiline", $time);
