@@ -22,6 +22,7 @@ Verilator 4.215 devel
 * Fix array method names with parenthesis (#3181) (#3183). [Teng Huang]
 * Fix split_var assign merging (#3177) (#3179). [Yutetsu TAKATSUKASA]
 * Fix nested generate if genblk naming (#3189). [yanx21]
+* Fix display of empty string constant (#3207). [Julie Schwartz]
 
 
 Verilator 4.214 2021-10-17
